Finalize PACE fixes without data payloads